# minicontainer

./: .clang-tidy  .editorconfig  .gitignore  CMakeLists.txt  CMakePresets.json  CONTRIBUTING.md  PLAN.md  README.md  SECURITY.md
.github/workflows/: ci.yml  codeql.yml
config/: minicontainer.json
docs/: architecture.md  comparison.md  minicontainer-demo.cast  release-notes-v1.0.0.md  research.md  resume-bullet.md  syscall-walkthrough.md  toolchain.md
docs/architecture/adr/: 0001-daemonless-shim.md  0002-user-mapping.md  0003-filesystem.md  0004-state.md  0005-networking.md  0006-security.md  0007-artifact.md  0008-gcp-topology.md
docs/proofs/: stage-0.md
docs/proofs/stage-00-foundation/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  live-commands.txt  local-tests.txt  terraform.txt
docs/proofs/stage-01-isolation-rootfs/: README.md  ci.txt  cleanup.txt  deploy.txt  detached.txt  host-inspection.txt  live-commands.txt  local-tests.txt
docs/proofs/stage-02-resources-stats/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  live-commands.txt  local-tests.txt  terraform.txt
docs/proofs/stage-03-lifecycle-recovery/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  live-commands.txt  local-tests.txt  terraform.txt
docs/proofs/stage-04-networking/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  live-commands.txt  local-tests.txt  terraform.txt
docs/proofs/stage-05-security/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  live-commands.txt  local-tests.txt
docs/proofs/stage-06-reliability-operations/: README.md  ci.txt  cleanup.txt  deploy.txt  host-inspection.txt  local-tests.txt  package.txt  reboot.txt  stress.txt
docs/proofs/stage-07-v1-release/: README.md  benchmark-n2.json  final-live.json  release-manifest.json  soak-e2-micro.json
docs/runbooks/: debugging.md  deploy.md  gcp-teardown.md  leak-audit.md  recovery.md  rollback.md
include/minicontainer/: cgroup.h  error.h  exec.h  fs.h  id.h  image.h  info.h  mount.h  network.h  nft.h  resource.h  runtime.h  security.h  state.h  stats.h  subid.h  validate.h
infra/bootstrap/: main.tf  variables.tf  versions.tf
infra/terraform/: backend.tf  example.tfvars  main.tf  outputs.tf  variables.tf  versions.tf
infra/terraform/tests/: foundation.tftest.hcl
packaging/: minicontainer-reconcile.service  postinst  prerm
scripts/: bootstrap-gcp.ps1  build-release.sh  capability-audit.sh  deploy.ps1  fetch-alpine-rootfs.sh  gcp-guard.ps1  live-reboot-proof.sh  quality-gates.sh  record-demo.sh  render-demo-gif.sh  verify-reproducible.sh
src/cli/: main.c
src/image/: import.c
src/linux/: cgroup.c  container.c  exec.c  security.c  stats.c
src/network/: netlink.c  nft.c  parse.c
src/runtime/: info.c  launch.c  shim_main.c
src/state/: store.c
src/util/: error.c  fs.c  id.c  mount.c  resource.c  subid.c  validate.c
tests/benchmark/: run_benchmarks.sh
tests/fixtures/: fork_pressure.c  network_fixture.c  reliability_fixture.c  security_probe.c
tests/integration/: test_alpine_import.sh  test_cgroup.sh  test_image_import.sh  test_lifecycle.sh  test_network.sh  test_package.sh  test_reliability.sh  test_runtime.sh  test_security.sh
tests/soak/: run_soak.sh
tests/unit/: test_core.c
